Fixed center display issue for note in practice screen.

--- a/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
@@ -27,7 +27,7 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4N-9t-pTa">
                         <rect key="frame" x="5" y="5" width="364" height="82"/>
                     </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dj5-yW-ulj">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dj5-yW-ulj" customClass="VerticalCenterTextView" customModule="Modacity" customModuleProvider="target">
                         <rect key="frame" x="25" y="15" width="324" height="41"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
