playlist history editing (in progress)

--- a/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
+++ b/Modacity/Modacity/ViewController/PracticeItem/practice_item.storyboard
@@ -1138,6 +1138,8 @@ Working On?</string>
                     <connections>
                         <outlet property="buttonRemoveKeyboard" destination="Sfo-ZU-2YH" id="yy2-K8-T07"/>
                         <outlet property="constraintForHeaderImageViewHeight" destination="b62-4u-fyW" id="GET-jj-doh"/>
+                        <outlet property="constraintForTableViewBottomSpace" destination="bBO-s0-jYl" id="2ra-uX-Cob"/>
+                        <outlet property="imageViewTopLeftIcon" destination="oEe-5m-Dyv" id="dZ8-f0-Mfj"/>
                         <outlet property="tableViewMain" destination="ASm-Ib-zd9" id="XMB-yU-iA1"/>
                         <outlet property="textfieldHeader" destination="f5o-tY-U8T" id="eeU-E7-6Yz"/>
                         <outlet property="viewHeaderSearchBar" destination="Uuz-Ja-Ztx" id="S92-UI-vQp"/>
